# src/modules/ogcapi-records/ogcapi-records-implementation/src/main/java/org/geonetwork/ogcapi/records/OgcapiCollectionsApiController.java
@@ -5,10 +5,19 @@
  */
 package org.geonetwork.ogcapi.records;
 
+import java.math.BigDecimal;
+import java.util.List;
 import lombok.SneakyThrows;
 import org.geonetwork.ogcapi.records.generated.CollectionsApi;
 import org.geonetwork.ogcapi.records.generated.model.OgcApiRecordsCatalogDto;
+import org.geonetwork.ogcapi.records.generated.model.OgcApiRecordsGetCollections200ResponseDto;
+import org.geonetwork.ogcapi.records.generated.model.OgcApiRecordsGetRecords200ResponseDto;
+import org.geonetwork.ogcapi.records.generated.model.OgcApiRecordsJsonSchemaDto;
+import org.geonetwork.ogcapi.records.generated.model.OgcApiRecordsRecordGeoJSONDto;
 import org.geonetwork.ogcapi.service.ogcapi.OgcApiCollectionsApi;
+import org.geonetwork.ogcapi.service.ogcapi.OgcApiItemsApi;
+import org.geonetwork.ogcapi.service.queryables.QueryablesService;
+import org.geonetwork.ogcapi.service.querybuilder.QueryBuilder;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
@@ -22,16 +31,68 @@ public class OgcapiCollectionsApiController implements CollectionsApi {
 
     private final NativeWebRequest request;
     private final OgcApiCollectionsApi collectionsApi;
+    private final OgcApiItemsApi itemsApi;
+    private final QueryablesService queryablesService;
+    private final QueryBuilder queryBuilder;
 
     @Autowired
-    public OgcapiCollectionsApiController(NativeWebRequest request, OgcApiCollectionsApi collectionsApi) {
+    public OgcapiCollectionsApiController(
+            NativeWebRequest request,
+            OgcApiCollectionsApi collectionsApi,
+            OgcApiItemsApi itemsApi,
+            QueryablesService queryablesService,
+            QueryBuilder queryBuilder) {
         this.request = request;
         this.collectionsApi = collectionsApi;
+        this.itemsApi = itemsApi;
+        this.queryablesService = queryablesService;
+        this.queryBuilder = queryBuilder;
     }
 
+    @Override
     @SneakyThrows
     public ResponseEntity<OgcApiRecordsCatalogDto> describeCollection(String catalogId) {
         var result = collectionsApi.describeCollection(catalogId);
         return new ResponseEntity<OgcApiRecordsCatalogDto>(result, HttpStatusCode.valueOf(200));
+    }
+
+    @Override
+    @SneakyThrows
+    public ResponseEntity<OgcApiRecordsGetCollections200ResponseDto> getCollections() {
+        var result = collectionsApi.getCollections();
+        return new ResponseEntity<OgcApiRecordsGetCollections200ResponseDto>(result, HttpStatusCode.valueOf(200));
+    }
+
+    @Override
+    @SneakyThrows
+    public ResponseEntity<OgcApiRecordsRecordGeoJSONDto> getRecord(String catalogId, String recordId) {
+        var result = itemsApi.getRecord(catalogId, recordId);
+
+        return new ResponseEntity<OgcApiRecordsRecordGeoJSONDto>(result, HttpStatusCode.valueOf(200));
+    }
+
+    @Override
+    @SneakyThrows
+    public ResponseEntity<OgcApiRecordsGetRecords200ResponseDto> getRecords(
+            String catalogId,
+            List<BigDecimal> bbox,
+            String datetime,
+            Integer limit,
+            Integer offset,
+            List<String> q,
+            List<String> type,
+            List<String> externalId,
+            List<String> ids,
+            List<String> sortby) {
+        var query = queryBuilder.buildFromRequest(
+                catalogId, bbox, datetime, limit, offset, type, q, ids, externalId, sortby, request.getParameterMap());
+        var result = itemsApi.getRecords(query);
+        return new ResponseEntity<OgcApiRecordsGetRecords200ResponseDto>(result, HttpStatusCode.valueOf(200));
+    }
+
+    @Override
+    public ResponseEntity<OgcApiRecordsJsonSchemaDto> getQueryables(String catalogId) {
+        var result = queryablesService.buildQueryables(catalogId);
+        return new ResponseEntity<OgcApiRecordsJsonSchemaDto>(result, HttpStatusCode.valueOf(200));
     }
 }
