# src/shared/ogcapi-records/src/main/java/org/geonetwork/ogcapi/service/dataaccess/CatalogApi.java
@@ -8,6 +8,7 @@ package org.geonetwork.ogcapi.service.dataaccess;
 import static org.apache.commons.lang3.StringUtils.isBlank;
 
 import java.text.MessageFormat;
+import java.util.List;
 import org.geonetwork.domain.Source;
 import org.geonetwork.domain.repository.SettingRepository;
 import org.geonetwork.domain.repository.SourceRepository;
@@ -35,31 +36,107 @@ public class CatalogApi {
         this.sourceRepository = sourceRepository;
     }
 
+    /**
+     * Gets the main portal UUID (`source` table with type=portal).
+     *
+     * @return main portal UUID
+     */
+    public String getMainPortalUUID() {
+        var main = sourceRepository.findByType("portal");
+        return main.map(Source::getUuid).orElse(null);
+    }
+
+    /**
+     * Finds all the defined portals (in DB `source`) and converts them to CatalogInfo (DB `source` and connected
+     * elastic record)
+     *
+     * @return all the defined portals
+     */
+    public List<CatalogInfo> getAllPortalInfos() {
+        var portals = sourceRepository.findAll().stream()
+                .map(x -> {
+                    try {
+                        return getPortalInfo(x.getUuid());
+                    } catch (Exception e) {
+                        throw new RuntimeException(e);
+                    }
+                })
+                .toList();
+        return portals;
+    }
+
+    /**
+     * given a catalogId, returns the DB `source` info.
+     *
+     * @param catalogId name (column `id`) of the source
+     * @return the DB `source` info
+     * @throws Exception not found or invalid catalogId
+     */
+    public Source getSource(String catalogId) throws Exception {
+        SimpleValidators.validateCatalogId(catalogId);
+
+        var sourceOptional = sourceRepository.findById(catalogId);
+        if (sourceOptional.isEmpty()) {
+            throw new NotFoundException(
+                    MessageFormat.format("Collection (GeoNetwork Source) with ID=''{0}'' was not found.", catalogId));
+        }
+        return sourceOptional.get();
+    }
+
+    /**
+     * Retrieves the ElasticSearch filter related to a collection.
+     *
+     * @param source from the DB `source table`
+     * @return the filter for that portal (might be "" for the main portal)
+     */
+    public String retrieveCollectionFilter(Source source) {
+        String collectionFilter = "";
+
+        if (source.getType().equals("subportal")) {
+            collectionFilter = source.getFilter();
+        } else if (source.getType().equals("harvester")) {
+            collectionFilter = String.format("+harvesterUuid:\"%s\"", source.getUuid());
+        }
+
+        return collectionFilter;
+    }
+
+    /**
+     * given a catalogId, get the corresponding DB `source` column + attached elastic record.
+     *
+     * @param catalogId collection/catalog/source ID
+     * @return DB `source` column + attached elastic record.
+     * @throws Exception invalid catalogId or not found
+     */
     public CatalogInfo getPortalInfo(String catalogId) throws Exception {
         SimpleValidators.validateCatalogId(catalogId);
 
         var sourceOptional = sourceRepository.findById(catalogId);
-        if (!sourceOptional.isPresent()) {
+        if (sourceOptional.isEmpty()) {
             throw new NotFoundException(
                     MessageFormat.format("Collection (GeoNetwork Source) with ID=''{0}'' was not found.", catalogId));
         }
         var source = sourceOptional.get();
 
-        var result = new CatalogInfo();
-        result.setSource(source);
-
         var serviceRecordUUID = getServiceRecord(source);
 
         if (isBlank(serviceRecordUUID)) {
-            return result;
+            return new CatalogInfo(source, null);
         }
 
         var indexRecord = simpleElastic.getOne(serviceRecordUUID);
-        result.setLinkedIndexRecord(indexRecord);
+        var result = new CatalogInfo(source, indexRecord);
 
         return result;
     }
 
+    /**
+     * find the attached metadata record for the source. If its the main portal, use setting
+     * `system/csw/capabilityRecordUuid`
+     *
+     * @param source from DB `source` table
+     * @return actual metdata record (usually XML)
+     */
     private String getServiceRecord(Source source) {
         var serviceRecordUUID = source.getServicerecord();
 
